updated mapper and repository