@@ -10,9 +10,7 @@ import core.basesyntax.bookstore.repository.book.BookRepository;
 import core.basesyntax.bookstore.repository.book.BookSpecificationBuilder;
 import core.basesyntax.bookstore.service.BookService;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
@@ -32,9 +30,10 @@ public class BookServiceImpl implements BookService {
 
     @Override
     public List<BookDto> findAll(Pageable pageable) {
-        return bookRepository.findAllWithCategories(pageable).stream()
+        List<Book> books = bookRepository.findAllWithCategories(pageable);
+        return books.stream()
                 .map(bookMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
